# BSU-schedule-console

./: CMakeLists.txt  ExcelReader.h  README.md  main.cpp
